--- a/views/user/newDay.ejs
+++ b/views/user/newDay.ejs
@@ -66,6 +66,9 @@
             </form>
         </li>
     </ul>
+    <div class="arrows">
+        <a href="/user/<%= month.num %>/<%= day.num %> "><i class="fas fa-chevron-left"></i>Back to <%= month.name %> <%= day.num %> </a>
+    </div>
 
 
 
