--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,7 +18,8 @@ main {
 
 main.userhome,
 main.showDay,
-main.new {
+main.new,
+main.edit {
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
