--- a/views/user/showDay.ejs
+++ b/views/user/showDay.ejs
@@ -40,7 +40,7 @@
                         <div class="card">
                             <div class="card-content">
                                 <p class="card-title">
-                                    <%= note.title %><span><a class="new" href="/user/<%= month.num%>/<%=day.num%>/edit"><i class="fas fa-pen fa-xs"></i></a></span></p>
+                                    <%= note.title %><span><a class="new" href="/user/<%= month.num%>/<%=day.num%>/<%= note.id %> /edit"><i class="fas fa-pen fa-xs"></i></a></span></p>
                                 <div class="card-body">
                                     <p>
                                         <%= note.content %>
