--- a/public/css/style.css
+++ b/public/css/style.css
@@ -152,6 +152,14 @@ section {
     width: 100%;
 }
 
+div.symptom {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 75px 0 25px;
+}
+
 div.card {
     height: 30vh;
     overflow-y: scroll;
@@ -185,11 +193,11 @@ a.new i {
     color: rgb(158, 212, 199);
 }
 
-i.filled {
+i#filled {
     color: rgb(158, 212, 199);
 }
 
-i.empty {
+i#empty {
     color: lightgray;
 }
 
