--- a/views/user/showDay.ejs
+++ b/views/user/showDay.ejs
@@ -47,11 +47,12 @@
                         <div class="card">
                             <div class="card-content">
                                 <p class="card-title">
-                                    <%= note.title %><span><a class="new" href="/user/<%= month.num%>/<%=day.num%>/edit"><i class="fas fa-pen fa-xs"></i></a></span></p>
-                                <p>
-                                    <%= note.content %>
-                                </p>
-                            </div>
+                                <%= note.title %><span><a class="new" href="/user/<%= month.num%>/<%=day.num%>/<%= note.id %> /edit"><i class="fas fa-pen fa-xs"></i></a></span></p>
+                                <div class="card-body">
+                                    <p>
+                                        <%= note.content %>
+                                    </p>
+                                </div>
                         </div>
                     </div>
                     <% }) %>
