--- a/views/user/showDay.ejs
+++ b/views/user/showDay.ejs
@@ -9,33 +9,33 @@
         </h2>
     </div>
     <section>
-
-        <h4 class='notes'>Symptoms: <span><a class="new" href="/user/<%= month.num%>/<%=day.num%>/new"><i class="fas fa-plus fa-xs"></i></a></span></h4>
         <% if (symptoms) { %>
-            <div class="row">
-                <% symptoms.forEach(symptom => { %>
-                    <div class="col s12 ">
-                        <div class="card" id="symptom">
-                            <h5>
-                                <%= symptom.type.slice(0,1).toUpperCase() + symptom.type.slice(1,symptom.type.length) %>
-                            </h5>
-                            <div class="symptom-severity">
-                                <% for( let i = 1; i <= symptom.severity; i++ ) { %>
-                                    <i class="fas fa-square" id="filled"></i>
-                                    <% } %>
-                                        <% if (symptom.severity < 5) { %>
-                                            <% for( let i = symptom.severity; i <= 5; i++ ) { %>
-                                                <i class="fas fa-square" id="empty"></i>
-                                                <% } %>
+            <h4 class='notes'>Symptoms: <span><a class="new" href="/user/<%= month.num%>/<%=day.num%>/new"><i class="fas fa-plus fa-xs"></i></a></span></h4>
+            <hr>
+            <% if (symptoms.length > 0) { %>
+                <div class="row">
+                    <% symptoms.forEach(symptom => { %>
+                        <div class="col s12 ">
+                            <div class="card" id="symptom">
+                                <h5>
+                                    <%= symptom.type.slice(0,1).toUpperCase() + symptom.type.slice(1,symptom.type.length) %>
+                                </h5>
+                                <div class="symptom-severity">
+                                    <% for( let i = 1; i <= symptom.severity; i++ ) { %>
+                                        <i class="fas fa-square" id="filled"></i>
+                                        <% } %>
+                                            <% if (symptom.severity < 5) { %>
+                                                <% for( let i = symptom.severity; i <= 5; i++ ) { %>
+                                                    <i class="fas fa-square" id="empty"></i>
                                                     <% } %>
+                                                        <% } %>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <% }) %>
-            </div>
-            <% } %>
-                <hr>
-
+                        <% }) %>
+                </div>
+                <% } %>
+                    <% } %>
     </section>
     <section>
         <h4 class='notes'>Notes: <span><a class="new" href="/user/<%= month.num%>/<%=day.num%>/new"><i class="fas fa-plus fa-xs"></i></a></span></h4>
