Add day of to day view

--- a/views/user/showDay.ejs
+++ b/views/user/showDay.ejs
@@ -8,6 +8,8 @@
                 <%= day.num %>
         </h2>
     </div>
+    <h4>Day
+        <%= dayOf %> of period</h4>
     <section>
         <% if (symptoms) { %>
             <h4 class='notes'>Symptoms: <span><a class="new" href="/user/<%= month.num%>/<%=day.num%>/new"><i class="fas fa-plus fa-xs"></i></a></span></h4>
