--- a/views/partials/sidenav.ejs
+++ b/views/partials/sidenav.ejs
@@ -6,5 +6,5 @@
     </li>
     <li><a class="tooltipped" data-position="right" data-tooltip="Montly Overview" href="/user">Calendar</a></li>
     <li><a class="tooltipped" data-position="right" data-tooltip="Data Summary" href="/user/summary">Overview</a></li>
-    <li><a class="tooltipped" data-position="right" data-tooltip="Symptom Checker" href="/advice">Advice</a></li>
+    <li><a class="tooltipped" data-position="right" data-tooltip="Medical Advice" href="/user/advice">Advice</a></li>
 </ul>
