--- a/views/user/adviceResults.ejs
+++ b/views/user/adviceResults.ejs
@@ -2,20 +2,23 @@
     <h3>Active Ingredients in
         <%= drug.slice(0,1).toUpperCase() + drug.slice(1,drug.length) %>
     </h3>
-    <ul>
-        <% for( let i = 0; i < activeIngredients.length; i++ ) { %>
-            <li>
-                <%= activeIngredients[i] %>
-            </li>
-            <% } %>
-    </ul>
+    <section class="data-search">
+        <ul>
+            <% for( let i = 0; i < activeIngredients.length; i++ ) { %>
+                <li class="ingredient">
+                    <i class="fas fa-vial fa-sm"></i>
+                    <%= activeIngredients[i] %>
+                </li>
+                <% } %>
+        </ul>
 
-    <form action="/user/meds" method="POST">
-        <input type="hidden" name="name" value="<%= drug.toLowerCase() %>">
-        <div class="input-field">
-            <input class="btn btn-secondary" type="submit" value="ADD MEDICATION">
-        </div>
-    </form>
+        <form action="/user/meds" method="POST">
+            <input type="hidden" name="name" value="<%= drug.toLowerCase() %>">
+            <div class="input-field">
+                <input class="btn btn-secondary" type="submit" value="ADD MEDICATION">
+            </div>
+        </form>
+    </section>
 
     <div class="arrows">
         <a href="/user/advice"><i class="fas fa-chevron-left"></i>Back to Search</a>
