--- a/views/user/showDay.ejs
+++ b/views/user/showDay.ejs
@@ -91,6 +91,6 @@
                 </section>
                 </div>
                 <div class="arrows">
-                    <a href="/user/<%= month.num %>"><i class="fas fa-chevron-left"></i>Back to <%= month.name %></a>
+                    <a href="/user/<%= month.num %>"><i class="fas fa-chevron-left"></i><%= month.name %></a>
                 </div>
 </main>
