--- a/views/user/summary.ejs
+++ b/views/user/summary.ejs
@@ -5,35 +5,27 @@
 
     <section class="data-search">
         <h5>Symptom Search</h5>
-        <p>Search your symptoms</p>
-        <form action="/user/summary/results" method="GET">
+        <form action="/user/summary/symptoms" method="GET">
             <div class="input-field">
-                <label for="searchdrug">Name:</label>
-                <input type="text" name="drug" id="searchdrug">
-            </div>
-            <div class="input-field">
-                <label for="searchbar">Name:</label>
+                <label for="searchbar">Type:</label>
                 <input type="text" name="type" id="searchbar">
+                <span class="helper-text">Search your symptoms by type</span>
             </div>
             <div class="input-field">
-                <input class="btn btn-secodnary" type="submit" value="SEARCH">
+                <input class="btn btn-secondary" type="submit" value="SEARCH">
             </div>
         </form>
     </section>
     <section class="data-search">
         <h5>Date Search</h5>
-        <p>Search date</p>
-        <form action="/user/summary/results" method="GET">
+        <form action="/user/summary/date" method="GET">
             <div class="input-field">
-                <label for="searchdrug">Date:</label>
-                <input type="text" name="drug" id="searchdrug">
+                <label for="date">Date:</label>
+                <input type="text" name="date" class="datepicker" id="date">
+                <span class="helper-text">Search your data by date (2020 Only at this time)</span>
             </div>
             <div class="input-field">
-                <label for="searchbar">Name:</label>
-                <input type="text" name="type" id="searchbar">
-            </div>
-            <div class="input-field">
-                <input class="btn btn-secodnary" type="submit" value="SEARCH">
+                <input class="btn btn-secondary" type="submit" value="SEARCH">
             </div>
         </form>
     </section>
