--- a/views/user/adviceResults.ejs
+++ b/views/user/adviceResults.ejs
@@ -5,7 +5,7 @@
     <section class="data-search">
         <ul>
             <% for( let i = 0; i < activeIngredients.length; i++ ) { %>
-                <li class="ingredient">
+                <li class="list">
                     <i class="fas fa-vial fa-sm"></i>
                     <%= activeIngredients[i] %>
                 </li>
