--- a/views/user/showDay.ejs
+++ b/views/user/showDay.ejs
@@ -32,7 +32,7 @@
                                                     <i class="fas fa-square" id="filled"></i>
                                                     <% } %>
                                                         <% if (symptom.severity < 5) { %>
-                                                            <% for( let i = symptom.severity; i <= 5; i++ ) { %>
+                                                            <% for( let i = symptom.severity; i < 5; i++ ) { %>
                                                                 <i class="fas fa-square" id="empty"></i>
                                                                 <% } %>
                                                                     <% } %>
