--- a/views/user/showDay.ejs
+++ b/views/user/showDay.ejs
@@ -28,11 +28,11 @@
                                                 <%= symptom.type.slice(0,1).toUpperCase() + symptom.type.slice(1,symptom.type.length) %>
                                             </h5>
                                             <div class="symptom-severity">
-                                                <% for( let i = 1; i < symptom.severity; i++ ) { %>
+                                                <% for( let i = 1; i <= symptom.severity; i++ ) { %>
                                                     <i class="fas fa-square" id="filled"></i>
                                                     <% } %>
                                                         <% if (symptom.severity < 5) { %>
-                                                            <% for( let i = symptom.severity; i <= 5; i++ ) { %>
+                                                            <% for( let i = symptom.severity; i < 5; i++ ) { %>
                                                                 <i class="fas fa-square" id="empty"></i>
                                                                 <% } %>
                                                                     <% } %>
@@ -54,7 +54,7 @@
                                     <div class="card">
                                         <div class="card-content">
                                             <p class="card-title">
-                                                <%= note.title %><span><a class="new" href="/user/<%= month.num%>/<%=day.num%>/<%= note.id %> /edit"><i class="fas fa-pen fa-xs"></i></a></span></p>
+                                                <%= note.title %><span><a class="new modal-trigger" href="#edit-note"><i class="fas fa-pen fa-xs"></i></a></span></p>
                                             <div class="card-body">
                                                 <p>
                                                     <%= note.content %>
@@ -62,7 +62,40 @@
                                             </div>
                                         </div>
                                     </div>
+
+
+                                    <div id="edit-note" class="modal">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title" id="signupLabel">Edit Note:
+                                                <span class="modal-close">&times;</span> </h5>
+                                        </div>
+                                        <form action="/user/<%=month.num%>/<%=day.num%>/<%= note.id %>/note?_method=PUT" method="POST">
+                                            <div class=" modal-content ">
+                                                <div class="input-field ">
+                                                    <label for="title">Title</label>
+                                                    <input type="text" name="title" id="title" value="<%= note.title %> " required>
+                                                </div>
+                                                <div class="input-field ">
+                                                    <label for="content">Content</label>
+                                                    <textarea name="content" id="content" class="materialize-textarea"><%= note.content %> </textarea required>
+                                                </div>
+                                                <div class="input-field ">
+                                                    <input type="hidden" name="id" value="<%= note.id %>">
+                                                </div>
+                                            </div>
+                                            <div class="modal-footer ">
+                                                <button type="submit " class="btn btn-secondary ">ENTER</button>
+                                        </form>
+                                        <form id="delete-button " action="/user/<%=month.num%>/
+                                            <%=day.num%>/
+                                                <%= note.id %>/note?_method=DELETE" method="POST">
+                                            <input class='btn btn-secondary' type='submit' value="DELETE">
+                                        </form>
+                                        </div>
+                                    </div>
+
                                     <% }) %>
+
                                 </div>
                                 <% } %>
                 </section>
