--- a/views/user/newDay.ejs
+++ b/views/user/newDay.ejs
@@ -20,7 +20,7 @@
                 <div class="input-field">
                     <input type="hidden" name="date" value="<%= new Date(2020, (month.num-1), day.num) %>">
                 </div>
-                <input class='btn btn-secondary' type='submit'>
+                <input class='btn btn-secondary' type='submit' value="SAVE">
             </form>
 
         </li>
@@ -44,7 +44,7 @@
                 <div class="input-field">
                     <input type="hidden" name="periodId" value="<%= period.id %>">
                 </div>
-                <input class='btn btn-secondary' id='send' type='submit'>
+                <input class='btn btn-secondary' id='send' type='submit' value="SAVE">
             </form>
         </li>
         <% } %>
@@ -66,7 +66,7 @@
                 <div class="input-field">
                     <input type="hidden" name="date" value="<%= new Date(2020, (month.num-1), day.num) %>">
                 </div>
-                <input class='btn btn-secondary' type='submit'>
+                <input class='btn btn-secondary' type='submit' value="SAVE">
             </form>
         </li>
     </ul>
