Add medication tooltip

--- a/views/user/summary.ejs
+++ b/views/user/summary.ejs
@@ -1,7 +1,8 @@
 <main class='advice'>
     <h3>Summary</h3>
     <section class="data-search">
-        <h5>My Medications</h5>
+        <h5>My Medications <a class=" tooltipped" data-position="right" data-tooltip="To add a medication, search by name in Advice"><i class="fas fa-info-circle fa-xs"></i></a></span>
+        </h5>
         <ul>
             <% for( let i = 0; i < meds.length; i++ ) { %>
                 <li class="list" id="med-list">
