Fix period start;

--- a/views/user/userHome.ejs
+++ b/views/user/userHome.ejs
@@ -6,7 +6,7 @@
         <h4>Day
             <%= dayOf %> of Period
         </h4>
-        <% } else if (predictedStart !== null){ %>
+        <% } else if (predictedStart){ %>
             <h4>Period Starts
                 <%= predictedStart %>
             </h4>
