--- a/views/user/newDay.ejs
+++ b/views/user/newDay.ejs
@@ -7,15 +7,83 @@
     <hr>
     <ul class="collapsible expandable">
         <li>
-            <h4 class='note collapsible-header'><span><i class="far fa-sticky-note fa-lg"></i></span> Notes: </h4>
-            <form class="collapsible-body" action="/user/<%=month.num%>/<%=day.num%>/note" method="POST">
-                <div class="input-field">
-                    <label for="title">Title</label>
-                    <input type="text" name="title" id="title" required>
-                </div>
-                <div class="input-field">
-                    <label for="content">Content</label>
-                    <textarea name="content" id="content" class="materialize-textarea"></textarea required>
+            <h4 class='note collapsible-header'><span><i class="far fa-moon fa-lg"></i></span> Period: </h4>
+            <form id='period-trigger' class="collapsible-body" action="/user/<%=month.num%>/<%=day.num%>/period" method="POST">
+                <% if (period && !period.endDate) { %>
+                    <div class="input-field check">
+                        <h6>Period ended today: </h6>
+                        <div class="switch">
+                            <label>
+                                <input id="end" name="end" type="checkbox">
+                                <span class="lever"></span>
+                            </label>
+                        </div>
+                    </div>
+                    <div class="input-field">
+                        <input type="hidden" name="periodId" value="<%= period.id %>">
+                    </div>
+                    <% } else if (!period) { %>
+                        <div class="input-field check">
+                            <h6>Period started today: </h6>
+                            <div class="switch">
+                                <label>
+                                        <input id="start" name="start" type="checkbox">
+                                        <span class="lever"></span>
+                                    </label>
+                            </div>
+                        </div>
+                        <% } else { %>
+                            <div class="input-field check">
+                                <h6 style="color:lightgrey">Period ended today: </h6>
+                                <div class="switch">
+                                    <label>
+                                        <input disabled id="end" name="end" type="checkbox">
+                                        <span class="lever"></span>
+                                    </label>
+                                </div>
+                            </div>
+                            <% } %>
+                                <div class="input-field">
+                                    <input type="hidden" name="date" value="<%= new Date(2020, (month.num-1), day.num) %>">
+                                </div>
+
+                                <input class='btn btn-secondary' id='send' type='submit' value="SAVE">
+            </form>
+        </li>
+        <% if (period) { %>
+            <li>
+                <h4 class='note collapsible-header'><span><i class="fas fa-angle-double-up fa-lg"></i></span> Symptoms: </h4>
+                <form id='symptoms' class="collapsible-body" action="/user/<%=month.num%>/<%=day.num%>/symptom" method="POST">
+                    <div class="input-field">
+                        <label for="type">Type</label>
+                        <input type="text" name="type" id="type" required>
+                        <span class="helper-text">Please enter a simple descriptor <a class=" tooltipped" data-position="bottom" data-tooltip="I.e., cramps, nausea, headaches, etc. For a more detailed entry, please create a note.  To report the intensity of your period, use the keyword 'level'. "><i class="fas fa-info-circle"></i></a></span>
+                    </div>
+                    <div class="input-field" data-errormsg="">
+                        <label for="severity">Severity</label>
+                        <input type="text" name="severity" id="severity" required>
+                        <span class="helper-text">Please enter a number 1-5</span>
+                    </div>
+                    <div class="input-field">
+                        <input type="hidden" name="date" value="<%= new Date(2020, (month.num-1), day.num) %>">
+                    </div>
+                    <div class="input-field">
+                        <input type="hidden" name="periodId" value="<%= period.id %>">
+                    </div>
+                    <input class='btn btn-secondary' id='send' type='submit' value="SAVE">
+                </form>
+            </li>
+            <% } %>
+                <li>
+                    <h4 class='note collapsible-header'><span><i class="far fa-sticky-note fa-lg"></i></span> Notes: </h4>
+                    <form class="collapsible-body" action="/user/<%=month.num%>/<%=day.num%>/note" method="POST">
+                        <div class="input-field">
+                            <label for="title">Title</label>
+                            <input type="text" name="title" id="title" required>
+                        </div>
+                        <div class="input-field">
+                            <label for="content">Content</label>
+                            <textarea name="content" id="content" class="materialize-textarea"></textarea required>
                 </div>
                 <div class="input-field">
                     <input type="hidden" name="date" value="<%= new Date(2020, (month.num-1), day.num) %>">
@@ -24,30 +92,6 @@
             </form>
 
         </li>
-        <% if (period) { %>
-        <li>
-            <h4 class='note collapsible-header'><span><i class="fas fa-angle-double-up fa-lg"></i></span> Symptoms: </h4>
-            <form id='symptoms' class="collapsible-body" action="/user/<%=month.num%>/<%=day.num%>/symptom" method="POST">
-                <div class="input-field">
-                    <label for="type">Type</label>
-                    <input type="text" name="type" id="type" required>
-                    <span class="helper-text" >Please enter a simple descriptor <a class=" tooltipped" data-position="bottom" data-tooltip="I.e., cramps, nausea, headaches, etc. For a more detailed entry, please create a note.  To report the intensity of your period, use the keyword 'level'. "><i class="fas fa-info-circle"></i></a></span>
-                </div>
-                <div class="input-field" data-errormsg="">
-                    <label for="severity">Severity</label>
-                    <input type="text" name="severity" id="severity" required>
-                    <span class="helper-text">Please enter a number 1-5</span>
-                </div>
-                <div class="input-field">
-                    <input type="hidden" name="date" value="<%= new Date(2020, (month.num-1), day.num) %>">
-                </div>
-                <div class="input-field">
-                    <input type="hidden" name="periodId" value="<%= period.id %>">
-                </div>
-                <input class='btn btn-secondary' id='send' type='submit' value="SAVE">
-            </form>
-        </li>
-        <% } %>
         <li>
             <h4 class='note collapsible-header'><span><i class=
                 "far fa-star fa-lg"></i></span> Sexual Activity: </h4>
